--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_name: MyString
-  comment: MyString
+  message: MyString
+  user: one
 
 two:
-  user_name: MyString
-  comment: MyString
+  message: MyString
+  user: two
